All changes in restaurant.html - new breakpoint (1070px) - fixed right margin on smaller devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
 
-* {
-  margin: 0;
-  padding: 0;
-}
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -296,6 +292,7 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
+  box-sizing: border-box;
   width: 100%;
 }
 #restaurant-container {
@@ -362,6 +359,18 @@ nav h1 a {
 @media screen and (max-width: 1279px) {
   #restaurants-list li {
     width: 300px;
+  }
+}
+@media screen and (max-width: 1070px) {
+  #restaurant-container {
+    grid-template-areas: 
+      "name name name name name name"
+      "img img img address address address "
+      "cuisine cuisine cuisine . . ."
+      ". . hours hours . .";
+    grid-template-columns: 10% 10% 30% 30% 10% 10%;
+    grid-template-rows: auto auto auto auto;
+    grid-column-gap: 10px;
   }
 }
 
